--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "react": "^18.2.0",
     "react-devtools": "^4.27.1",
     "react-dom": "^18.2.0",
@@ -15,6 +16,9 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-form": "^8.3.9",
+    "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
