--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "react-it-camasutra",
+  "name": "social-network-react-app",
   "version": "0.1.0",
-  "homepage": "https://alexpopov0122.github.io/social-network-react-app",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.2",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.58",
+    "@types/react": "^18.2.27",
+    "@types/react-dom": "^18.2.12",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.5.1",
     "classnames": "^2.3.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "react": "^18.2.0",
-    "react-devtools": "^4.27.1",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.6.2",
+    "react-redux": "^8.1.3",
+    "react-redux-typescript": "^3.0.0-rc.3",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "redux-form": "^8.3.9",
-    "redux-thunk": "^2.4.2",
+    "redux-form": "^8.3.10",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -48,12 +48,7 @@
       "last 1 safari version"
     ]
   },
-  "jest": {
-    "transformIgnorePatterns": [
-      "node_modules/(?!(react-leaflet|@react-leaflet|d3-*|axios))"
-    ]
-  },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "@types/redux-form": "^8.3.6"
   }
 }
