--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^18.2.27",
     "@types/react-dom": "^18.2.12",
     "@types/react-router-dom": "^5.3.3",
+    "antd": "^5.12.8",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
@@ -24,11 +26,17 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
